--- a/nwpt2023/bidirectional-analysis.tex
+++ b/nwpt2023/bidirectional-analysis.tex
@@ -39,7 +39,9 @@
 \newcommand{\rotleq}{\rotatebox[origin=c]{90}{$\leq$}}
 \newcommand{\rotsubseteq}{\rotatebox[origin=c]{90}{$\subseteq$}}
 
-\title{Bidirectional analysis and Sound approximation through Galois connections}
+%\title{Bidirectional analysis and Sound approximation through Galois connections}
+
+\title{Bidirectional data-flow analyses compared to relational through Galois connections}
 
 \author{
   Dylan McDermott \inst{1}
@@ -51,7 +53,7 @@
 
 \authorrunning{McDermott, Morita and Uustalu}
 
-\titlerunning{Bidirectional analysis and Sound approximation through Galois connections}
+\titlerunning{Bidirectional data-flow analyses}
 
 \institute{
   Reykjavik University,
@@ -59,14 +61,17 @@
   \email{dylanm@ru.is}, \email{yasuaki20@ru.is}, \email{tarmo@ru.is}
 }
 
-\authorrunning{Dylan, Yasuaki, Tarmo}
 
 \begin{document}
 
 \maketitle
 
 \begin{abstract}
-  We studied bidirectional program analyses and its precision and soundness, and how information flows represented by bidirectional transfer functions are combined in the program composition such as sequential execution and non-deterministic choice. To analyze program analyses meta-mathematically, we associated representations of information flow through Galois connections. We found that bidirectional information flow has property called butterfly and the property is not preserved by sequential composition in general. Finally, we propose two approaches to properly handle sequential composition in bidirectional analysis.
+Some data-flow analyses are not backward or forward but bidirectional, data-flow information is propagated in both the backward and forward directions along a program's control-flow. Examples include partial redundancy elimination (in the original form of Morel and Renvoise), type inference for dynamic typing, analyses of stack-based languages such as load-pop reduction, path-sensitive alias analysis.
+
+We model ideal analyses with relations on complete lattices; an analysis is specified by a binary relation for every instruction. We ask how adequately relations can be represented by pairs of backward and forward monotone functions. We conduct this study in terms of Galois connections and their fixed-points. We show that fixed-points of the adjunction between relations and backward-forward function pairs are precisely relations closed under arbitrary joins with a certain additional property (that we call ``butterfly''). This class of relations is closed under intersection (corresponding to nondeterministic choice), but not closed under relational composition (corresponding to sequencing). Bidirectional analyses from literature involve relations from this class whose composition is not in the class. Accordingly, backward-forward function pairs act soundly as a representation of bidirectional analyses, but this is not perfectly compositional in that one cannot hide the intermediate program points in composition. This is different from the situation with the classical unidirectional analyses.
+  
+  % We studied bidirectional program analyses and its precision and soundness, and how information flows represented by bidirectional transfer functions are combined in the program composition such as sequential execution and non-deterministic choice. To analyze program analyses meta-mathematically, we associated representations of information flow through Galois connections. We found that bidirectional information flow has property called butterfly and the property is not preserved by sequential composition in general. Finally, we propose two approaches to properly handle sequential composition in bidirectional analysis.
 \end{abstract}
 
 \section{Introduction}
@@ -77,37 +82,53 @@ The analysis of an instruction is ideally described by a relation between data-f
 These relations are in practice specified---either specified precisely or approximated soundly---by other means, typically monotone functions in the backward (post-to-pre) or forward (pre-to-post) direction, called transfer functions.
 Unidirectional data-flow analyses describe a wide class of aspects of program behavior. But some data-flow analyses are bidirectional, they involve information flow in both directions and are specified by a pair of transfer functions for each instruction. Bidirectional analyses include partial redundancy elimination in the original formulation of Morel and Renvoise \cite{khedker_bidirectional_1999}, type inference for dynamically typed languages \cite{DBLP:journals/cl/KhedkerDM03}, load-pop reduction for stack-machine based languages \cite{frade_bidirectional_2009} and path-sensitive alias analysis \cite{jaiswal_bidirectionality_2020}.
 
-\section{Static analysis}
-We model static analyses in the style of \cite{frade_bidirectional_2009}: First we consider
-complete lattices whose elements are dataflow values that represent
-information on a program point, assign a relation between pre and post
-dataflow values for each basic program construct together with reasoning
-rules for program compositions such as sequence, choice and loop. We
-write $C$, $D$, and $E$ to mean complete lattice of dataflow values, and
-represent the type of binary relations on pre and post complete lattices
-by subsets of their binary product, e.g, $\Pow(D \times E)$, and write $S$,
-$Q$ and $R$ to mean inhabitants of such types. We conventionally refer
-to the first component of binary product (i.e, $D$ in $D \times E$) as a
-lattice of pre dataflow values, and the second component of binary
-product (i.e, $E$ in $D \times E$) as a lattice of post dataflow values.
+\section{Specifying analyses}
 
-And then, we approximate such infomation flow presented by a relation to make it computable.
-by a bidirectional transfer function pair: one is a monotone function
-called backward function which takes a post dataflow value and returns a
-pre dataflow value, and another is called forward transfer function
-which takes a pre dataflow value and returns a post data value. A type
-of bidirectional transfer function pairs are represented by a product of
-two spaces of monotone functions, e.g, $((D \tomon E) \times (E \tomon D))$,
-and we write $(\fb, \ff)$, $(\gb , \gf)$ for inhabitants of such types.
+We model data-flow analyses in the style of
+\cite{frade_bidirectional_2009}.  The domains of data-flow values will
+be complete lattices $(D, \leq, \bigjoin)$, $(E, \leq, \bigjoin)$ etc.
+The compatibility relation of data-flow values for a single
+instruction or a bigger program is a relation. If the data-flow
+domains for the entry and exit points are $(D, \leq, \bigjoin)$,
+$(E, \leq, \bigjoin)$, the corresponding compatibility relation is a
+subset of their product, i.e., an element of the set
+$\Pow(D \times E)$, which is also a complete lattice; we typically
+denote relations by $R$, $S$.  And then we aim to specify such a
+compatibility relation by a pair of monotone backward and forward
+transfer functions. The poset of bidirectional transfer function pairs
+is the product of two posets of monotone functions, viz.,
+$((D \tomon E) \times (E \tomon D))$, and we typically write
+$(\fb, \ff)$, $(\gb , \gf)$ for inhabitants of this poset.
 
-\section{Galois connections}
+
+% complete lattices whose elements are data-flow values.
+
+% represent
+% information on a program point, assign a relation between pre and post
+% dataflow values for each basic program construct together with reasoning
+% rules for program compositions such as sequence, choice and loop. We
+% write $D$, and $E$ for complete lattices of data-flow values, and
+% represent the type of binary relations on pre and post complete lattices
+% by subsets of their binary product, e.g, $\Pow(D \times E)$, and write $S$,
+% $Q$ and $R$ to mean inhabitants of such types. We conventionally refer
+% to the first component of binary product (i.e, $D$ in $D \times E$) as a
+% lattice of pre dataflow values, and the second component of binary
+% product (i.e, $E$ in $D \times E$) as a lattice of post dataflow values.
+
+% And then, we approximate such a compatibility relation by a pair
+% of monotone backward and forward transfer functions. The poset
+% of bidirectional transfer function pairs is the  product
+% of two posets of monotone functions, viz.,
+% $((D \tomon E) \times (E \tomon D))$, and we write $(\fb, \ff)$,
+% $(\gb , \gf)$ for typical inhabitants of this poset.
+
 A Galois connection between two posets $(X , \leq)$ and $(Y , \leq)$ is a pair
 of monotone functions $F : X \tomon Y$ and $G : Y \tomon X$ such that $F(x) \leq y \iff y \leq G(x)$.
 In \cite{frade_bidirectional_2009}, a Galois connection between relations and pairs of monotone backward and forward functions was considered.
 In this work, we introduce a finer sequence of
 Galois connections to facilitate detailed comparison of essential properties
-of unidirectional and bidirectional analyses. Fig.~\ref{fig:galois-connections} shows four specification formats of analyses 
-flow and Galois connections between them: $\Rel(D, E)= (\Pow(D \times E), \subseteq)$
+of unidirectional and bidirectional analyses. Fig.~1 shows four specification formats of analyses 
+and three Galois connections between them: $\Rel(D, E)= (\Pow(D \times E), \subseteq)$
 is the poset of binary relations and the inclusion order, $\Endo(D , E) = (D \times E \tomon D \times E, \leq)$
 is the poset of monotone functions on pairs and pointwise order determined
 by product order on their codomain. $\Bidir(D , E) = ((E \tomon D) \times (D \tomon E), \leq)$ is the poset of pairs of monotone backward and forward functions and product
@@ -137,20 +158,20 @@ order of two pointwise orders; $\Unidir(D , E) = (E \tomon D, \leq)$ is the pose
 \end{figure}
 The Galois connections are given by the following monotone functions.
 \begin{align*}
-  F(R) &= \lambda p_{0}. \bigjoin (p \leq p_{0} \land p \in R) &  G(f) &= \{ p \mid p \leq f(p) \} \\
-  H(f) &= (\lambda e. f (\top , e) , \lambda d. f (d , \top)) & I(\fb, \ff) &= \lambda p. (\ff (\pi_{1}(p)) , \fb (\pi_{2}(p))) \\
+  F(R) &= \lambda p_{0}. \bigjoin (p \leq p_{0} \land p \in R) &  G(f) &= \{ p \mid p \leq f(p) \} = \nu p.\, f(p)\\
+  H(f) &= (\lambda e. \pi_0(f (\top , e)), \lambda d. \pi_1(f (d , \top))) & I(\fb, \ff) &= \lambda (d,e). (\fb (e), \ff (d)) \\
   J(\fb, \ff) &= \fb & K(\fb) &= (\fb , \lambda d. \top)
 \end{align*}
 
-By taking an image of a monotone function with codomain $\Rel(D, E)$,
+By taking the image of a monotone function with codomain $\Rel(D, E)$,
 we obtain a class of relations (a subposet of $\Rel(D, E)$). For
-example, $\{ R \in \Rel(D, E) \mid \exists f.\, R = G(f) \}$ can be obtained from $G$
+example, $\{ R \in \Rel(D, E) \mid \exists f.\, R = G(f) \}$ can be obtained from the right adjoint $G$
 of the topmost Galois connection $F \dashv G$. By general
 facts about Galois connections, the obtained image is actually the poset of 
 fixed-points of $F \comp G$ and is isomorphic to the poset of
 fixed-points of $G \comp F$. In terms of specification of analyses, the image
 of $G$ consists of those compatibility relations that can be specified by monotone functions on pairs. This class consists of relations that are closed under arbitary joins (for short, join-closed).
-Similarly, the image of $G \comp I$ is the class of relations which are join-closed and also enjoy what we call the butterfly property, and the image of $G \comp I \comp K$ is the class of relations which are join-closed and also pre-down-/post-upclosed. We say that a relation $R$ is \emph{join-closed} if $S \subseteq R \implies \bigjoin S \in R$, \emph{butterfly} if $(d_{0}, e_{1}) \in R \land (d_{1}, e_{0}) \in R \land d_{0} \leq d \leq d_{1} \land e_{0} \leq e \leq e_{1} \implies (d , e) \in R$, and \emph{pre-down-/post-upclosed} if $(d_{1}, e_{0}) \in R \land d \leq d_{1} \land e_{0} \leq e \implies (d , e)$. Fig.~\ref{fig:butterfly} shows diagrammatic presentations of the butterfly and pre-down-/post-upclosed properties.
+Similarly, the image of $G \comp I$ is the class of relations which are join-closed and also enjoy what we call the butterfly property, and the image of $G \comp I \comp K$ is the class of relations which are join-closed and also pre-down-/post-upclosed. We say that a relation $R$ is \emph{join-closed} if $S \subseteq R \implies \bigjoin S \in R$, \emph{butterfly} if $(d_{0}, e_{1}) \in R \land (d_{1}, e_{0}) \in R \land d_{0} \leq d \leq d_{1} \land e_{0} \leq e \leq e_{1} \implies (d , e) \in R$, and \emph{pre-down-/post-upclosed} if $(d_{1}, e_{0}) \in R \land d \leq d_{1} \land e_{0} \leq e \implies (d , e)$. Fig.~2 shows diagrammatic presentations of the butterfly and pre-down-/post-upclosed properties.
 
 \begin{figure}[h]
   \centering
@@ -183,7 +204,7 @@ into operations on another poset along a Galois connection: in particular for th
 From general facts about Galois connections, the inequations
 $G(f) \bowtie G(g) \subseteq G (f \bowtielift g)$ and $G(f) \cap G(g)) \subseteq G(f \caplift g)$ hold for any $f$ and $g$.
 This fact ensures that the lifted composition operations are complete wrt.\ their ideal counterpart in $\Rel(D, E)$ (overapproximate them), but does not guarantee their soundness (underapproximation, which is what we really need).
-By expanding out the individual definitions of the Galois connections leading to $\Rel(D ,E)$ ($F \dashv G$ , $H \comp F \dashv G \comp I$, and $J \comp H \comp F \dashv G \comp I \comp K$, specifically) and calculating specifically for each case, we can confirm that all the lifted operations are indeed sound too, except for the lifted sequential composition operator for $\Bidir(D, E)$, namely, $(\fb , \ff) \bowtielift (\gb , \gf) = H(F((G(I(\fb , \ff)) \bowtie G(I(\gb , \gf)))))$. This phenomenon occurs because the butterfly property is not closed under relation composition.
+By expanding out the individual definitions of the Galois connections leading to $\Rel(D ,E)$ (namely, $F \dashv G$, $H \comp F \dashv G \comp I$, and $J \comp H \comp F \dashv G \comp I \comp K$) and calculating specifically for each case, we can confirm that all the lifted operations are indeed sound too, except for the lifted sequential composition operator for $\Bidir(D, E)$, namely, $(\fb , \ff) \bowtielift (\gb , \gf) = H(F((G(I(\fb , \ff)) \bowtie G(I(\gb , \gf)))))$. This phenomenon occurs because the butterfly property is not closed under relation composition.
 
 In terms of analyses, this means that the sequential composition of two compatibility relations, each of them described by a bidirectional transfer function pair, cannot be safely represented by a single bidirectional transfer function pair. This phenomenon does not occur in unidirectional analyses, but only in bidirectional analyses. 
 
@@ -192,7 +213,7 @@ In this work, we present two different technical approaches to address this phen
 One approach is to use the fact that soundness of lifted operations still holds for the Galois connection between $n$-ary relations $\Pow(D_{1}, D_{2}, ... , D_{n})$ and $n-1$ pairs of monotone functions $((D_{1} \tomon D_{2}) \times (D_{2} \tomon D_{1}) \times ... \times (D_{n-1} \tomon D_{n}) \times (D_{n} \tomon D_{n-1}))$. In this approach, compositionality is somewhat broken in that intermediate program points cannot be hidden in sequential composition. 
 
 Another approach is to restrict the class of relations to a class narrower than the class of join-closed butterfly relations but closed under relation composition and intersection. We show that the poset $\UnidirConst(D, E) = ((E \tomon D) \times E, \leq)$ (with forward functions constant) locates between $\Unidir(D , E)$ and $\Bidir(D, E)$, the class of relations corresponding to $\UnidirConst(D, E)$ is  closed under both $\bowtie$ and $\cap$, and the lifted operations are sound.
-This approach does not always allow one to capture the original bidirectional analysis exactly. For example, in the load-pop reduction analysis, the compatibility relations for all single instructions are butterfly, but those for some sequences are not. Still, it can provide a reasonable systematic overapproximation in some cases. 
+This approach does not always allow one to capture the original bidirectional analysis exactly. For example, in the load-pop reduction analysis, the compatibility relations for all single instructions are butterfly, but those for some sequences (e.g., \textsf{load}; \textsf{dup}) are not. Still, this approach can provide a reasonable systematic overapproximation of the original analysis in some cases. 
 
 \bibliographystyle{plain}
 \bibliography{bidirectional-analysis}
