--- a/nwpt2023/bidirectional-analysis.bib
+++ b/nwpt2023/bidirectional-analysis.bib
@@ -1,3 +1,30 @@
+@article{DBLP:journals/cacm/MorelR79,
+  author       = {Etienne Morel and
+                  Claude Renvoise},
+  title        = {Global Optimization by Suppression of Partial Redundancies},
+  journal      = {Commun. {ACM}},
+  volume       = {22},
+  number       = {2},
+  pages        = {96--103},
+  year         = {1979},
+  url          = {https://doi.org/10.1145/359060.359069},
+  doi          = {10.1145/359060.359069},
+  timestamp    = {Tue, 06 Nov 2018 12:51:39 +0100},
+  biburl       = {https://dblp.org/rec/journals/cacm/MorelR79.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@misc{stack,
+  author = "T. Van Drunen and A. L. Hosking and Jens Palsberg",
+  title = "Reducing loads and stores in stack architectures",
+  howpublisher = "Manuscript",
+  year = 2000
+}
+
+
+
+
 @article{frade_bidirectional_2009,
 	series = {Proceedings of the 2009 {ACM} {SIGPLAN} {Symposium} on {Partial} {Evaluation} and {Program} {Manipulation}, {PEPM}'09},
 	title = {Bidirectional data-flow analyses, type-systematically: 2009 {ACM} {SIGPLAN} {Symposium} on {Partial} {Evaluation} and {Program} {Manipulation}, {PEPM}'09},
